# test_pinocchio_catkin

./: CMakeLists.txt  README.md  package.xml
include/bridge/: val_rviz_translator.hpp
launch/: visualize_IK_solution.launch
models/: valkyrie_test.urdf
src/: inverse-kinematics.cpp  overview-simple.cpp  test-floating-base.cpp  test-urdf.cpp  visualize_ik_solution.cpp
src/bridge/: CMakeLists.txt  val_rviz_translator.cpp
